[tool.poetry]
name = "devjobs"
version = "0.1.0"
description = "My first project with poetry"
authors = ["Rafael_Espinoza <rafael.moreno.espinoza10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
flask = "^3.1.0"
pydantic = "^2.10.3"
python-dotenv = "^1.0.1"
fastapi-utils = "^0.8.0"
aiofiles = "^24.1.0"
uvicorn = {extras = ["gunicorn"], version = "^0.32.1"}
pdfplumber = "^0.11.4"
python-multipart = "^0.0.19"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
